# McDipper

./: AUTHORS.md  CMakeLists.txt  Makefile  README.md
configs/: NuclearList.yaml  NuclearSkinZr.yaml  gbw.yaml  ipsat.yaml
src/: charges.cpp  config.cpp  dipole_ipsat.cpp  event.cpp  main.cpp  main_pdf.cpp  model_gbw.cpp  model_ipsat.cpp  nucleus.cpp  pdfs_lhapdf.cpp  random.cpp
src/include/: Hankel.h  charges.h  config.h  dipole_ipsat.h  event.h  model_gbw.h  model_ipsat.h  nuclear_data.h  nucleus.h  params_gen.h  params_ipsat.h  pdfs_lhapdf.h  random.h  routines.h
src/include/nuclear/: H2.cpp  He3.cpp
